# Bark_POW4

./: CMakeLists.txt  Client.cpp  Main.cpp  README.md  Server.cpp  vcpkg.json
SFML/include/: SFMLApp.h
SFML/src/: SFMLApp.cpp
common/include/: SharedPtr.h
documentation/: Build.md
engine/include/: Collider.h  QuadTree.h  World.h
engine/src/: World.cpp
game/include/: Game.h  Menu.h  Metrics.h  SFMLApp.h  Scene.h  SceneManager.h  client.h  client_manager.h  client_network_interface.h  network_client_manager.h  network_server_manager.h  packet.h  packet_manager.h
game/src/: Game.cpp  Menu.cpp  SFMLApp.cpp  Scene.cpp  SceneManager.cpp  client_manager.cpp  network_client_manager.cpp  network_server_manager.cpp  packet.cpp  packet_manager.cpp
samples/include/: GroundCollisionSample.h  Sample.h  SampleManager.h
samples/src/: GroundCollisionSample.cpp  Sample.cpp  SampleManager.cpp
tests/: mock_tests.cpp
